2013-03-28  Corinna Vinschen  <vinschen@redhat.com>

	* ntstatus.h: Regenerate from MSDN information.

2013-03-14  Corinna Vinschen  <vinschen@redhat.com>

	* winbase.h (PIPE_ACCEPT_REMOTE_CLIENTS): Define when building for
	Vista or later.
	(PIPE_REJECT_REMOTE_CLIENTS): Ditto.

2013-03-09  Corinna Vinschen  <vinschen@redhat.com>

	* lmaccess.h (SERVICE_ACCOUNT_FLAG_LINK_TO_HOST_ONLY): Define.
	(NetAddServiceAccount): Add prototype.
	(NetRemoveServiceAccount): Ditto.
	(NetIsServiceAccount): Ditto.
	(NetEnumerateServiceAccounts): Ditto.

2013-02-19  Kai Tietz  <ktietz@redhat.com>

	* patchapi.h: Update to 400, 450 MSI API.
	* msidefs.h: Add enumerators additions for _WIN32_MSI 400, and 450.
	* msi.h: Add features for _WIN32_MSI 400, and 450.

2013-01-08  Jean-Baptiste Kempf  <jb@videolan.org>
        Kai Tietz  <ktietz@redhat.com>

        * winnls.h (IDN_ALLOW_UNASSIGNED): New macro.
        (IDN_USE_STD3_ASCII_RULES): Likewise.
        (NORM_FORM): Reformat.
        (IsNormalizedString): Add prototype.
        (NormalizeString): Remove duplicate.

2013-01-08  Jean-Baptiste Kempf  <jb@videolan.org>

        * winbase.h (CREATE_MUTEX_INITIAL_OWNER): New define.
        (CRITICAL_SECTION_NO_DEBUG_INFO): New define.
        (InitializeCriticalSectionEx): New prototype.
